# ForgeKey

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  RELEASE.md  SECURITY.md  cliff.toml  components.json  eslint.config.mjs  install.sh  next.config.mjs  package.json  pnpm-lock.yaml  tailwind.config.ts
.github/workflows/: ci.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json  tauri.linux.conf.json
src-tauri/capabilities/: default.json  desktop.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  pty.rs  tray.rs  tray_linux.rs  utils.rs
src-tauri/src/commands/: decrypt.rs  import.rs  list.rs  mod.rs  new.rs  remove.rs  vanity.rs
src-tauri/src/models/: mod.rs
src-tauri/src/setup/: foundry.rs  mod.rs
src/api/: wallet-api.ts
src/components/: update-dialog.tsx
src/components/core/: add-keystore-form.tsx  address-list.tsx  delete-address-dialog.tsx  empty-keystore-screen.tsx  footer.tsx  group-form.tsx  header.tsx  keystore-form.tsx  keystore-list.tsx  keystore-view.tsx  password-dialog.tsx  private-key-dialog.tsx  settings.tsx  theme-toggle.tsx  welcome-screen.tsx
src/components/core/address/: import-address-form.tsx  import-keystore-form.tsx  import-options-dialog.tsx  import-options.tsx  keystore-select.tsx  new-address-form.tsx  select-address-type.tsx  vanity-address-form.tsx
src/components/layout/: animated-page.tsx  form-page.tsx
src/components/ui/: address-display.tsx  animated-list.tsx  back-button.tsx  button.jsx  button.tsx  copy-button.tsx  dialog-icon-badge.tsx  dialog.jsx  dialog.tsx  form-field.tsx  input.jsx  input.tsx  label.jsx  label.tsx  option-card.tsx  page-header.tsx  password-input.tsx  scroll-area.jsx  scroll-area.tsx  separator.jsx  separator.tsx  switch.jsx  switch.tsx
src/contexts/: KeystoreContext.tsx  index.ts  keystore-context.tsx  theme-context.tsx  zeroize-context.tsx
src/hooks/: use-updater.ts  use-wallet-address-management.ts  use-wallet-handlers.ts  use-wallet-navigation.ts  use-wallet-reconciliation.ts  use-wallet-state.ts  use-wallet-sync.ts  useWalletHandlers.ts  useWalletReconciliation.ts  useWalletState.ts
src/hooks/address/: use-address-navigation-handlers.ts  use-import-dialog.ts
src/hooks/router/: use-address-form-cleanup.ts  use-navigation.ts  use-route-helpers.ts  use-router-sync.ts
src/hooks/wallet/: use-add-address.ts  use-delete-address.ts  use-import-keystore-address.ts  use-private-key.ts  use-wallet-address-management.ts  use-wallet-navigation.ts  use-wallet-reconciliation.ts  use-wallet-state.ts
src/lib/: animations.ts  constants.ts  password-validation.ts  vanity-validation.ts  zeroized-string.ts
src/pages/: _app.tsx  index.tsx
src/router/: index.ts  store.ts  types.ts
src/stores/: wallet-store.ts
src/styles/: globals.css
src/types/: address.ts  wallet.ts
src/utils/zeroize/: index.ts  zeroize-module.ts
src/utils/zeroize/pkg/: package.json  wasm_zeroize.d.ts  wasm_zeroize.js  wasm_zeroize_bg.wasm  wasm_zeroize_bg.wasm.d.ts
wasm-zeroize/: Cargo.toml  README.md
wasm-zeroize/src/: lib.rs
