[package]
name = "ForgeKey"
version = "1.0.0"
description = "A user-friendly UI for the Foundry Cast Wallet CLI"
authors = ["Saeta <saetaeth@proton.me>"]
license = "GNU GPLv3"
repository = "https://github.com/saeta-eth/cast-wallet"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [
  "macos-private-api",
  "tray-icon",
  "image-png",
] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
log = "0.4"
tauri-plugin-log = "2"
tauri-plugin-positioner = { version = "2", features = ["tray-icon"] }
dirs = "5.0"
zeroize = "1.7.0"
