[package]
name = "wasm-zeroize"
version = "0.1.0"
edition = "2021"
description = "WebAssembly module for secure password and private key handling with automatic memory zeroization"
authors = ["ForgeKey Team"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.87"
js-sys = "0.3.64"
console_error_panic_hook = "0.1.7"
zeroize = "1.6.0"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"
lto = true
